2008-11-22  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.h
	* src/controller.c
	(controller_run_app, vgl_controller_class_init)
	(vgl_controller_init):
	Created new VglController object with the following signals:
	"connected", "disconnected", "track-started", "track-stopped",
	"player-stopped" and "usercfg-changed".
	(apply_usercfg, check_session_thread)
	(controller_audio_started_cb, finish_playing_track)
	(controller_stop_playing, controller_disconnect):
	Emit newly-defined signals in their respective functions.

2008-11-09  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c (create_main_menu): Fix translation string

2008-11-09  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-sb-plugin.c
	(VglSbPluginPrivate)
	(vgl_sb_plugin_init, vgl_sb_plugin_dispose, main_panel_create)
	(main_panel_update, main_panel_item_activated)
	* src/vgl-tray-icon.c
	(vgl_tray_icon_init, vgl_tray_icon_finalize, ctxt_menu_create)
	(VglTrayIconPrivate, ctxt_menu_update, ctxt_menu_item_activated):
	Store all items and handlers using an array.
	Use gulong instead of gint for storing handlers.

2008-11-09  Alberto Garcia  <agarcia@igalia.com>

	* po/POTFILES.in: Added uimisc.h, removed dbus.c

2008-11-09  Alberto Garcia  <agarcia@igalia.com>

	* src/uimisc.h
	* src/vgl-tray-icon.c
	(ctxt_menu_create)
	* src/vgl-main-window.c
	(create_main_menu):
	Use stock menu items for settings, stop, play and next.

2008-11-09  Alberto Garcia  <agarcia@igalia.com>

	* AUTHORS: Added Luca Bruno to AUTHORS file

2008-11-09  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-tray-icon.c
	(vgl_tray_icon_init, vgl_tray_icon_finalize, ctxt_menu_create)
	(ctxt_menu_item_activated): Added "About" to tray icon menu.

	* src/vgl-main-window.c
	* src/uimisc.h
	* src/uimisc.c
	(ui_about_dialog): Moved about dialog code from
	vgl-main-window.c to uimisc.c

	* src/controller.h
	* src/controller.c
	(controller_show_about): Generic function to show the about
	dialog.
