@@ -11,6 +11,7 @@
 #include <gtk/gtk.h>
 
 #include "playlist.h"
+#include "controller.h"
 
 G_BEGIN_DECLS
 
@@ -42,9 +43,7 @@ GType vgl_tray_icon_get_type(void) G_GNUC_CONST;
 
 /* Public methods */
 
-VglTrayIcon *vgl_tray_icon_create (void);
-void vgl_tray_icon_notify_playback (VglTrayIcon *vti, LastfmTrack *track);
-void vgl_tray_icon_show_notifications (VglTrayIcon *vti, gboolean show_notifications);
+VglTrayIcon *vgl_tray_icon_create (VglController *controller);
 
 G_END_DECLS
 
